Fix up entrypoint to Docker container

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -16,5 +16,4 @@
           - SITENAME=${SITENAME:?Env var SITENAME is not set.}
         restart: unless-stopped
         volumes:
-          - .:/bridgetest/log
-        entrypoint: ["cron", "-f"]
+          - ./log:/bridgetest/log
